03 projekti on valmis

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/layout.css">
 </head>
 <body>
-    <h1>Mozilla is cool</h1>
+    <h1 id="headertag">Mozilla is cool</h1>
     <figure>
         <img src="./img/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
     </figure>
